--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_APP_ID=kKjKcXmpMNBj5LGf4XrmBheOVLWxoDxSbz2M6Q5B
 NEXT_PUBLIC_SERVER_URL=https://wdn1d4timenj.usemoralis.com:2053/server
+chainId=31337
+masterKey=yVTA8nfKUjLkVPkI7Tirq641vkUyQEQHNvRz4zsW
