--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -1,1 +1,4 @@
-{"31337":{"NftMarketplace":["0x5FbDB2315678afecb367f032d93F642f64180aa3"]}}
+{
+    "4": { "NftMarketplace": ["0x8218d7972a5DD1A4c76d27c99650498b21B0524F"] },
+    "31337": { "NftMarketplace": ["0x5FbDB2315678afecb367f032d93F642f64180aa3"] }
+}
