--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@web3uikit/web3": "^0.1.5",
-    "moralis": "^2.1.0",
+    "moralis": "1.5.11",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
