--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web3uikit/web3": "^0.1.5",
+    "@web3uikit/core": "^0.1.8",
+    "@web3uikit/icons": "^0.1.5",
+    "@web3uikit/web3": "^0.1.6",
+    "graphql": "^16.6.0",
+    "magic-sdk": "^9.0.0",
     "moralis": "1.5.11",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -18,6 +22,7 @@
     "web3uikit": "^1.0.2"
   },
   "devDependencies": {
+    "@apollo/client": "^3.6.9",
     "autoprefixer": "^10.4.8",
     "dotenv": "^16.0.1",
     "eslint": "8.22.0",
